<resources>
    <string name="crasher_summary">Test crash generation</string>
    <string name="crasher_title">Crash emulator</string>
    <string name="crash_null">NULL-deref</string>
    <string name="crash_java_npe">Java NPE</string>
    <string name="crash_sigabrt">SIGABRT</string>
    <string name="crash_sigfpe">SIGFPE</string>
    <string name="crash_stackcall_overflow">stack call overflow</string>
    <string name="crash_stackbuf_overflow">stack buffer overflow</string>
    <string name="about_apple2ix">About Apple2ix…</string>
    <string name="about_apple2ix_summary">About this software</string>
    <string name="about_apple2ix_licenses">Licenses…</string>
    <string name="about_apple2ix_licenses_summary">Apple2ix software licenses</string>
    <string name="app_name">Apple2ix</string>
    <string name="audio_configure">Configure audio…</string>
    <string name="audio_configure_summary">Speaker volume, Mockingboard, etc</string>
    <string name="audio_latency">Audio latency</string>
    <string name="audio_latency_summary">Audio latency in secs</string>
    <string name="cancel">Cancel</string>
    <string name="color_configure">Video display mode</string>
    <string name="color_configure_summary">Video display emulation mode</string>
    <string name="color_bw">Black/white</string>
    <string name="color_color">Color</string>
    <string name="color_interpolated">Interpolated color</string>
    <string name="crasher">Crashes</string>
    <string name="crasher_check_title">Check for crash reports</string>
    <string name="crasher_check_summary">Check for crash reports to email developer</string>
    <string name="crasher_send">Send crash report?</string>
    <string name="crasher_send_message">Sorry there has been a problem. Do you want to send a crash report to the developer?</string>
    <string name="diskA">Drive 1</string>
    <string name="diskB">Drive 2</string>
    <string name="disk_eject">Eject</string>
    <string name="disk_insert_toast_cannot">Cannot insert (not a disk image or state file)</string>
    <string name="disk_read_only">Read only</string>
    <string name="disk_read_write">Read/write</string>
    <string name="disk_selection_newschoool">System chooser</string>
    <string name="disk_show_operation">Show Disk ][ operations</string>
    <string name="disk_show_operation_summary">Shows when disk drives are reading or writing</string>
    <string name="emulation_continue">Continue…</string>
    <string name="emulation_disks">Load disk image</string>
    <string name="file_chooser">Choose disk image or state file…</string>
    <string name="header_disks">Insert disk:</string>
    <string name="header_eject_1">Eject 1</string>
    <string name="header_eject_2">Eject 2</string>
    <string name="input_current">Current touch device</string>
    <string name="input_current_summary">Choose current touch device</string>
    <string name="joystick">Joystick</string>
    <string name="joystick_axis_sensitivity_summary">Tune joystick axis sensitivity (decelerate or accelerate)</string>
    <string name="joystick_button_button1">Button 1 (Open Apple)</string>
    <string name="joystick_button_button2">Button 2 (Closed Apple)</string>
    <string name="joystick_button_button_both">Both</string>
    <string name="joystick_button_button_none">None</string>
    <string name="joystick_button_tap_button">Tap fire</string>
    <string name="joystick_button_tap_button_summary">Button to fire on tap down</string>
    <string name="joystick_button_tapdelay_summary">Joystick touch down delay in video frames</string>
    <string name="joystick_button_swipe_up_button">Swipe up fire</string>
    <string name="joystick_button_swipe_up_button_summary">Button to fire on swipe up</string>
    <string name="joystick_button_swipe_down_button">Swipe down fire</string>
    <string name="joystick_button_swipe_down_button_summary">Button to fire on swipe down</string>
    <string name="joystick_button_threshold_summary">Joystick/keypad button switch threshold in pts (max: &#8531; screen height)</string>
    <string name="joystick_calibrate">Calibrate…</string>
    <string name="joystick_calibrate_summary">Configure and test current settings</string>
    <string name="joystick_configure">Configure touch joystick…</string>
    <string name="joystick_configure_summary">Axis touch, buttons, etc</string>
    <string name="joystick_axisleft">Joystick/keypad axis on left</string>
    <string name="joystick_axisleft_summary">Joystick/keypad axis on left (buttons on right)</string>
    <string name="joystick_azimuth_visible">Show joystick/keypad heading</string>
    <string name="joystick_azimuth_visible_summary">Shows current axis direction and magnitude</string>
    <string name="joystick_visible">Joystick/keypad visibility</string>
    <string name="joystick_visible_summary">Show controls overlay when engaged</string>
    <string name="key_closed_apple">[ClosedApple]</string>
    <string name="key_ctrl">[Ctrl]</string>
    <string name="key_down">&#8595;</string>
    <string name="key_esc">[ESC]</string>
    <string name="key_left">&#8592;</string>
    <string name="key_none">[None]</string>
    <string name="key_open_apple">[OpenApple]</string>
    <string name="key_ret">[Return]</string>
    <string name="key_right">&#8594;</string>
    <string name="key_space">[Space]</string>
    <string name="key_up">&#8593;</string>
    <string name="keyboard">Keyboard</string>
    <string name="keyboard_choose_alt">Choose alt keyboard…</string>
    <string name="keyboard_choose_alt_summary">Choose alternative customized layout</string>
    <string name="keyboard_click_enabled">Enable key click</string>
    <string name="keyboard_click_enabled_summary">Enables key click sound if available</string>
    <string name="keyboard_configure">Configure touch keyboard…</string>
    <string name="keyboard_configure_summary">Transparency, lowercase, custom keys</string>
    <string name="keyboard_glyph_scale">Keyboard glyphs scaled 2x</string>
    <string name="keyboard_glyph_scale_summary">(Makes keyboard appear less pixelated on large screens)</string>
    <string name="keyboard_lowercase_enabled">Enable lowercase</string>
    <string name="keyboard_lowercase_enabled_summary">Enable lowercase keys</string>
    <string name="keyboard_visibility_active">Visibility when active</string>
    <string name="keyboard_visibility_active_summary">Keyboard and touch menu visibility when active</string>
    <string name="keyboard_visibility_inactive">Visibility when inactive</string>
    <string name="keyboard_visibility_inactive_summary">Keyboard and touch menu visibility when inactive</string>
    <string name="keypad">Keypad Joystick</string>
    <string name="keypad_choose">Choose keypad keys…</string>
    <string name="keypad_choose_summary">Choose axis and button keys</string>
    <string name="keypad_choose_title">Axis &amp; buttons</string>
    <string name="keypad_choose_current">Choose XXX Key: </string>
    <string name="keypad_configure">Configure touch keypad joystick…</string>
    <string name="keypad_configure_summary">@string/joystick_configure_summary</string>
    <string name="keypad_key_axis_c">Center</string>
    <string name="keypad_key_axis_dn">Down</string>
    <string name="keypad_key_axis_dl">Down and Left</string>
    <string name="keypad_key_axis_dr">Down and Right</string>
    <string name="keypad_key_axis_l">Left</string>
    <string name="keypad_key_axis_r">Right</string>
    <string name="keypad_key_axis_ul">Up and Left</string>
    <string name="keypad_key_axis_up">Up</string>
    <string name="keypad_key_axis_ur">Up and Right</string>
    <string name="keypad_key_button_tap">Tap</string>
    <string name="keypad_key_button_swipeup">Swipe Up</string>
    <string name="keypad_key_button_swipedown">Swipe Down</string>
    <string name="keypad_preset_seafox">Seafox keys…</string>
    <string name="keypad_preset_custom">Choose custom…</string>
    <string name="keypad_preset_arrows_space">(↑ ← → ↓), tap spacebar</string>
    <string name="keypad_preset_az_left_right_space">(A Z ← →), tap spacebar</string>
    <string name="keypad_preset_ijkm_space">(I J K M), tap spacebar</string>
    <string name="keypad_preset_left_right_space">(← →), tap spacebar</string>
    <string name="keypad_preset_wadx_space">(W A D X), tap spacebar</string>
    <string name="keypad_tapdelay_summary">Keypad touch down delay in secs</string>
    <string name="menu_disks">Load image or state file…</string>
    <string name="menu_disks_summary">Insert Disk ][ image or state file</string>
    <string name="menu_settings">Emulator settings…</string>
    <string name="menu_settings_summary">General settings, joystick, keyboard</string>
    <string name="mockingboard_disabled_title">Mockingboard disabled</string>
    <string name="mockingboard_disabled_mesg">Mockingboard could not be enabled</string>
    <string name="mockingboard_enable">Enable Mockingboard</string>
    <string name="mockingboard_enable_summary">Revision C in Slot 4/5 (may require restart) (may consume extra battery)</string>
    <string name="mockingboard_volume">Mockingboard volume</string>
    <string name="mockingboard_volume_summary">Set the Mockingboard volume</string>
    <string name="mode_landscape">Landscape</string>
    <string name="mode_landscape_summary">Enable landscape or portrait mode</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="portrait_calibrate">Calibrate portrait mode</string>
    <string name="portrait_calibrate_framebuffer">Display position</string>
    <string name="portrait_calibrate_keyboard_height">Keyboard height</string>
    <string name="portrait_calibrate_keyboard_position">Keyboard position</string>
    <string name="portrait_calibrate_summary">Adjust keyboard size, framebuffer position, etc</string>
    <string name="preferences_reset_title">Reset preferences</string>
    <string name="preferences_reset_summary">Reset preferences to defaults and quit emulator</string>
    <string name="preferences_reset_really">Really reset and quit?</string>
    <string name="preferences_reset_warning">You will lose your settings</string>
    <string name="quit">Quit</string>
    <string name="quit_reboot">Reset or quit emulator…</string>
    <string name="quit_reboot_choice">Reset, reboot or quit?&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#13;&#10;…</string>
    <string name="reboot">Reboot</string>
    <string name="reset">Reset</string>
    <string name="reset_preferences">Reset settings</string>
    <string name="reset_self_test">Self Test</string>
    <string name="reset_soft">Soft</string>
    <string name="restore">Quick restore</string>
    <string name="save">Quick save</string>
    <string name="saverestore">Save &amp; restore…</string>
    <string name="saverestore_choice">Save current state or restore previous?</string>
    <string name="saverestore_summary">Save and restore emulator state</string>
    <string name="skip">Skip&#8594;</string>
    <string name="speaker_volume">Speaker volume</string>
    <string name="speaker_volume_summary">Set the speaker volume</string>
    <string name="settings">Apple2ix emulator settings</string>
    <string name="settings_advanced">Advanced settings</string>
    <string name="settings_advanced_summary">Warning: these settings may degrade performance</string>
    <string name="settings_advanced_joystick">Advanced joystick/keypad settings</string>
    <string name="settings_advanced_joystick_summary">Advanced settings and performance tuning</string>
    <string name="storage">/storage/</string>
    <string name="state_not_restored">Error restoring state…</string>
    <string name="touch_menu_enable">Enable touch menus</string>
</resources>